src/format/snapshots/braze_sync__format__snapshot_tests__all_in_sync_only_drift_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter\n{ only_drift: true }.format(&fixtures::catalog_schema_unchanged())"
---
Summary: 0 changed, 1 in sync, 0 orphan, 0 destructive
