src/format/snapshots/braze_sync__format__snapshot_tests__all_kinds_mixed_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::all_kinds_mixed())"
---
{
  "version": 1,
  "summary": {
    "changed": 4,
    "in_sync": 0,
    "destructive": 0,
    "orphan": 0,
    "gating_drift": 4,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "catalog_schema",
      "name": "cardiology",
      "op": "modified",
      "drift_tier": "gating",
      "field_diffs": [
        {
          "op": "added",
          "field": {
            "name": "score",
            "type": "number"
          }
        }
      ]
    },
    {
      "kind": "content_block",
      "name": "promo",
      "op": "modified",
      "drift_tier": "gating",
      "orphan": false,
      "text_diff": {
        "additions": 5,
        "deletions": 3
      }
    },
    {
      "kind": "email_template",
      "name": "welcome",
      "op": "unchanged",
      "drift_tier": "gating",
      "subject_changed": true,
      "body_html_diff": {
        "additions": 20,
        "deletions": 8
      },
      "metadata_changed": false,
      "orphan": false
    },
    {
      "kind": "custom_attribute",
      "name": "marketing_segment",
      "op": "deprecation_toggled",
      "from": false,
      "to": true,
      "drift_tier": "gating"
    }
  ]
}
