src/format/snapshots/braze_sync__format__snapshot_tests__all_kinds_mixed_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter::default().format(&fixtures::all_kinds_mixed())"
---
📋 Catalog Schema: cardiology
   + field: score (number)

📝 Content Block: promo
   ~ content changed (+5 -3)

📧 Email Template: welcome
   ~ subject changed
   ~ body_html changed (+20 -8)

🏷  Custom Attribute: marketing_segment
   ~ deprecated: false → true

Summary: 4 changed, 0 in sync, 0 orphan, 0 destructive
