src/format/snapshots/braze_sync__format__snapshot_tests__catalog_items_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::catalog_items_with_changes())"
---
{
  "version": 1,
  "summary": {
    "changed": 1,
    "in_sync": 0,
    "destructive": 1,
    "orphan": 0
  },
  "diffs": [
    {
      "kind": "catalog_items",
      "catalog_name": "cardiology",
      "added": 3,
      "modified": 1,
      "removed": 1,
      "unchanged": 9842
    }
  ]
}
