src/format/snapshots/braze_sync__format__snapshot_tests__catalog_items_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter.format(&fixtures::catalog_items_with_changes())"
---
📦 Catalog Items: cardiology
   + 3 added, ~ 1 modified, - 1 removed (in 9847 total)

Summary: 1 changed, 0 in sync, 0 orphan, 1 destructive
