src/format/snapshots/braze_sync__format__snapshot_tests__catalog_schema_field_diffs_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::catalog_schema_with_mixed_field_diffs())"
---
{
  "version": 1,
  "summary": {
    "changed": 1,
    "in_sync": 0,
    "destructive": 1,
    "orphan": 0,
    "gating_drift": 1,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "catalog_schema",
      "name": "cardiology",
      "op": "modified",
      "drift_tier": "gating",
      "field_diffs": [
        {
          "op": "modified",
          "from": {
            "name": "is_active",
            "type": "string"
          },
          "to": {
            "name": "is_active",
            "type": "boolean"
          }
        },
        {
          "op": "added",
          "field": {
            "name": "severity_level",
            "type": "number"
          }
        },
        {
          "op": "removed",
          "field": {
            "name": "legacy_code",
            "type": "string"
          }
        }
      ]
    }
  ]
}
