src/format/snapshots/braze_sync__format__snapshot_tests__catalog_schema_field_diffs_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter::default().format(&fixtures::catalog_schema_with_mixed_field_diffs())"
---
📋 Catalog Schema: cardiology
   ~ field: is_active (string → boolean)
   + field: severity_level (number)
   - field: legacy_code (string)

Summary: 1 changed, 0 in sync, 0 orphan, 1 destructive
