src/format/snapshots/braze_sync__format__snapshot_tests__catalog_schema_unchanged_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::catalog_schema_unchanged())"
---
{
  "version": 1,
  "summary": {
    "changed": 0,
    "in_sync": 1,
    "destructive": 0,
    "orphan": 0,
    "gating_drift": 0,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "catalog_schema",
      "name": "stable",
      "op": "unchanged",
      "drift_tier": "none",
      "field_diffs": []
    }
  ]
}
