src/format/snapshots/braze_sync__format__snapshot_tests__catalog_schema_unchanged_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter::default().format(&fixtures::catalog_schema_unchanged())"
---
✅ Catalog Schema: stable
   no drift

Summary: 0 changed, 1 in sync, 0 orphan, 0 destructive
