src/format/snapshots/braze_sync__format__snapshot_tests__content_block_added_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::content_block_added())"
---
{
  "version": 1,
  "summary": {
    "changed": 1,
    "in_sync": 0,
    "destructive": 0,
    "orphan": 0,
    "gating_drift": 1,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "content_block",
      "name": "fresh_promo",
      "op": "added",
      "drift_tier": "gating",
      "orphan": false
    }
  ]
}
