src/format/snapshots/braze_sync__format__snapshot_tests__content_block_added_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter::default().format(&fixtures::content_block_added())"
---
📝 Content Block: fresh_promo
   + new content block

Summary: 1 changed, 0 in sync, 0 orphan, 0 destructive
