src/format/snapshots/braze_sync__format__snapshot_tests__content_block_body_modified_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::content_block_body_modified())"
---
{
  "version": 1,
  "summary": {
    "changed": 1,
    "in_sync": 0,
    "destructive": 0,
    "orphan": 0,
    "gating_drift": 1,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "content_block",
      "name": "promo",
      "op": "modified",
      "drift_tier": "gating",
      "orphan": false,
      "text_diff": {
        "additions": 1,
        "deletions": 1
      }
    }
  ]
}
